<resources>
    <string name="app_name">MoneyManagementApp</string>
    <string name="text_splash_title">MoneyManagement</string>
    <string name="text_splash_sub_title">Manage Your Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_empty_transactions">No Transactions Available</string>
    <string name="text_income_title">Income</string>
    <string name="text_expense_title">Expense</string>
    <string name="text_balance_title">Balance</string>

    <string-array name="categories">
        <item>Allowance</item>
        <item>Salary</item>
        <item>Petty Cash</item>
        <item>Bonus</item>
        <item>Household</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Beauty</item>
        <item>Social Life</item>
        <item>Health</item>
        <item>Other</item>
    </string-array>
    <string name="text_menu_about">About</string>
    <string name="text_alert_dialog_title">Money Management App</string>
    <string name="text_alert_dialog_message">"
v1.0.0

Created by:

Jordie Juwono
Ikhsan Hidayat
Muhammad Refri Ansyari
Thomas Wendra Atmadja
    "</string>
    <string name="title_edit">Edit</string>
    <string name="text_category">Category</string>
    <string name="text_add_category_name">Add Category</string>
    <string name="text_hint_name">Category Name</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_save">Save</string>
    <string name="text_navigate_income">Income</string>
    <string name="text_navigate_expense">Expense</string>
    <string name="text_add_income">INCOME</string>
    <string name="text_add_expense">EXPENSE</string>
    <string name="text_bar_edit_categories">Edit Categories</string>
    <string name="text_bar_categories">Categories</string>
    <string name="text_category_added">Category Added</string>
    <string name="text_category_failed">Failed</string>
    <string name="text_delete_success">Delete Success</string>
    <string name="text_delete_failed">Delete Failed !</string>
    <string name="text_update_success">"Update Success "</string>
    <string name="text_update_failed">Update Failed !</string>
    <string name="title_delete">Delete</string>
    <string name="titlebar_edit_category">Edit Category</string>
    <string name="titlebar_new_category">New Category</string>
    <string name="text_zero">Rp0.0</string>
    <string name="text_income_rb">Income</string>
    <string name="text_expense_rb">Expense</string>
    <string name="text_delete">Delete</string>
    <string name="text_title_landing_page">Money Management App</string>
    <string name="text_description_landing_page">You can use this application to help you record your daily income and expenses</string>
    <string name="text_graph">Graph Feature</string>
    <string name="text_description_graph">This application can show graph based on your income and expenses</string>
    <string name="text_features">News Feature</string>
    <string name="text_description_features">You can also read up-to-date news about crypto, stocks, and currencies at news section</string>
    <string name="text_homepage">Homepage</string>
</resources>