<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.transactionpage.transactionlist.TransactionListFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_total_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Rp 200.0000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_income_title"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Rp 200.0000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_expense_title"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Rp 200.0000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_balance_title"
                    android:textAllCaps="true"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue_light"
        android:src="@drawable/ic_add" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_transactions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cv_dashboard"
        android:layout_marginTop="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:listitem="@layout/item_transaction" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <include
        android:id="@+id/layout_scenario"
        layout="@layout/component_scenario_layout" />

</RelativeLayout>